--- a/index.html
+++ b/index.html
@@ -12,9 +12,7 @@
     <header class="site-header">
         <div class="container header-inner">
             <a href="#inicio" class="logo">
-                <!-- Substituir pelo <img> da logo quando quiser -->
-                <span class="logo-mark"></span>
-                <span class="logo-text">codexum</span>
+                <img src="/assets/codexum.png" alt="logo codexum">
             </a>
 
             <nav class="main-nav">
@@ -33,7 +31,7 @@
         <section id="inicio" class="hero">
             <div class="container hero-inner">
                 <div class="hero-copy">
-                    <p class="hero-kicker">Agência de desenvolvimento ecommerce</p>
+                    <p class="hero-kicker">Agência de desenvolvimento de software</p>
                     <h1 class="hero-title">
                         Construindo inovação,<br />
                         linha por linha de código.
@@ -233,7 +231,7 @@
                     </p>
                     <p class="section-text">
                         Preencha o formulário ao lado ou, se preferir, envie um e-mail
-                        diretamente para <strong>contato@codexum.com</strong>.
+                        diretamente para <strong>fale@codexum.com.br</strong>.
                     </p>
                 </div>
 
@@ -269,8 +267,7 @@
         <div class="container footer-inner">
             <div class="footer-brand">
                 <div class="logo">
-                    <span class="logo-mark"></span>
-                    <span class="logo-text">codexum</span>
+                    <img src="/assets/codexum.png" alt="logo codexum">
                 </div>
                 <p class="footer-tagline">
                     Construindo inovação, linha por linha de código.
